# Automaton

./: #Start.glade#  .gitignore  CMakeLists.txt  README.md  Start.glade  Table.glade  Tutorial.glade  gtk.css  int DFA_driver.cpp  layout.glade  main.c  part1.c  resource.xml  start.c  table.c  template.tex
Headers/: dfadriver.h  latexdriver.h  output.h  string_generator.h  table.h  transformer.h  util.h
Source/: dfadriver.c  latexdriver.c  output.c  start.c  string_generator.c  table.c  test.c  transformer.c  util.c
Utils/: aut.dot  main.tex
